fixes using tailwind example

--- a/examples/using-tailwind/source/layout/theme.liquid
+++ b/examples/using-tailwind/source/layout/theme.liquid
@@ -18,7 +18,7 @@
       {{ settings.body_font | font_face }}
     </style>
 
-    {{ 'stylesheet.css' | asset_url | stylesheet_tag }}
+    {{ 'base.min.css' | asset_url | stylesheet_tag }}
 
     {{ content_for_header }}
 
