--- a/examples/using-tailwind/source/sections/page.liquid
+++ b/examples/using-tailwind/source/sections/page.liquid
@@ -1,13 +1,14 @@
-<div class="flex items-center justify-center h-vh flex-col">
+<div class="flex bg-slate-100 flex-col justify-center text-center w-vw justify-items-center h-vh">
 
   <a
     href="{{ section.settings.url }}"
     target="_blank"
-    class="logo">
+    class="logo mx-auto">
     {% render 'icon.logo' %}
   </a>
 
-  <p class="font-mono uppercase pt-2 tracking-logo text-logo text-gray-300 font-semibold bg-white">
+
+  <p class="font-mono uppercase text-xs pt-2 tracking-logo text-logo text-gray-400 font-semibold">
     {{ section.settings.title }}
   </p>
 
